# powerfile-rs

./: Cargo.toml
cli/: Cargo.toml
cli/src/: create.rs  main.rs
core/: Cargo.toml
core/src/: interpreter.rs  lexer.rs
lang/: Cargo.toml
lang/src/: parser.rs
src/: interpreter.rs  lexer.rs  main.rs  parser.rs  visitor.rs
templating/: Cargo.toml
templating/src/: index.rs  indexer.rs  lib.rs  main.rs  search.rs  storage.rs  template_index.rs  trie.rs  util.rs
